--- a/views/partials/header-navbar.ejs
+++ b/views/partials/header-navbar.ejs
@@ -11,7 +11,7 @@
             <a href="/users/register"><i class="fa-regular fa-pen-to-square"></i> Registrar</a>
             <% if (locals.isLogged) { %>
                 <a href="">
-                    <p>Hola! <%= users.firstName %>
+                    <p>Hola! <%=/*  users.firstName  */%>
 
                     </p>
                 </a>
