validaciones desde el front

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,7 +37,6 @@
             <button type="submit"> Ingresar </button>
 
     </form>
-
+    <script src="/js/loginValidation.js"></script>
 </body>
-
 </html>
