--- a/public/css/login.css
+++ b/public/css/login.css
@@ -119,3 +119,22 @@ form .ingresar button {
     background-color: #fff;
 }
 
+.invalid {
+    border: solid 1px red;
+    box-shadow: 0 0 10px red
+}
+
+form .text-danger {
+    color: red;
+    font-size: 12px;
+}
+
+.error {
+    color: red;
+    display: block;
+}
+
+.valid {
+    border: solid 1px green;
+    box-shadow: 0 0 10px green
+}
