--- a/views/create.ejs
+++ b/views/create.ejs
@@ -105,7 +105,7 @@
         </div>
     </main>
 
-    <script src="/public/js/prodValidation.js"></script>
+    <script src="/js/prodValidation.js"></script>
 
 </body>
 
