--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/CSS/register.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
         integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
+
+     
 </head>
 
 <body>
@@ -27,15 +29,15 @@
                 <div class=' <%= locals.errors && errors.lastName ? 'text-danger' : null  %> '><%= locals.errors && errors.lastName ? errors.lastName.msg : null %></div>
             </div>
             <div class="grupo">
-                <input type="email" name="email" id="name" ><span class="barra"></span>
+                <input type="email" name="email" id="email" ><span class="barra"></span>
                 <label for="email">Email</label>
                 <div class=' <%= locals.errors && errors.email ? 'text-danger' : null  %> '><%= locals.errors && errors.email ? errors.email.msg : null %></div>
             </div>
             <div class="grupo">
-                <input type="password" name="password" id="name" ><span class="barra"></span>
+                <input type="password" name="password" id="password" ><span class="barra"></span>
                 <label for="password">Contraseña</label>
-                <p>Usá entre 8 y 16 carácteres</p>
                 <div class=' <%= locals.errors && errors.password ? 'text-danger' : null  %> '><%= locals.errors && errors.password ? errors.password.msg : null %></div>
+                <br>
             </div>
 
             <div class="grupo">
@@ -55,6 +57,6 @@
         
     </form>
     </main>
+    <script src="/js/registerValidation.js"></script>
 </body>
-
 </html>
