--- a/public/css/register.css
+++ b/public/css/register.css
@@ -21,6 +21,7 @@ h1 {
     text-align: center;
     font-weight: 700;
 }
+
 form {
     background: #fff;
     padding: 40px;
@@ -31,11 +32,17 @@ form {
 .form {
     width: 100%;
     margin: auto;
+    font-family: 'Inter';
+}
+
+.elige-categoria {
+    position: relative;
+    top: -1px;
 }
 
 form .grupo {
     position: relative;
-    margin: 45px;
+    margin-top: 45px;
 }
 input {
     background: none;
@@ -69,12 +76,14 @@ button{
     color: rgb(87, 87, 87);
     height: 40px;
 }
+
 p {
     font-size: 12px;
     color: #666;
     margin-left: auto;
     
 }
+
 h3 {
     margin-top: 20px;
 }
