--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,12 +34,11 @@
             <div class="grupo">
                 <input type="password" name="password" id="name" ><span class="barra"></span>
                 <label for="password">Contraseña</label>
-                <p>Usá entre 8 y 16 carácteres</p>
                 <div class=' <%= locals.errors && errors.password ? 'text-danger' : null  %> '><%= locals.errors && errors.password ? errors.password.msg : null %></div>
             </div>
 
             <div class="grupo">
-                <label for="userRole"> Elige una categoria</label>
+                <label class="elige-categoria" for="userRole"> Elige una categoria</label>
                 <select name="userRole" id="userRole">
                     <option value="usuario">Usuario </option>
                     <option value="admin">Admin </option>
