--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,15 +9,7 @@
 </head>
 <body>
     <header>
-
-        <div class="logo-header">
-            <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
-        </div>
-
-        <nav class="menu-principal">
-            <a href="#">Menú principal</a> 
-        </nav>
-
+        <%- include('partials/header.ejs') %>
     </header>
 
         <form action="/products/edit/<%= product.id %>?_method=PATCH " method="POST" enctype="multipart/form-data" id="edit">
