--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,7 +52,7 @@
                 <div class=' <%= locals.errors && errors.avatar ? 'text-danger' : null  %> '><%= locals.errors && errors.avatar ? errors.avatar.msg : null %></div>
             </div>
             <button type="submit"> Registrate</button>
-            <button type="submit"><a href="/">Menú Principal</a></button>
+            <a href="/">Menú Principal</a>
         </div>
         
     </form>
