--- a/public/css/register.css
+++ b/public/css/register.css
@@ -85,10 +85,18 @@ button{
 
 button:hover {
     background-color: rgba(0, 24, 235, 0.652);
+    transition: 300ms;
 }
 
-button a {
+form div a {
     color: rgb(87, 87, 87);
+    padding: 0.8rem;
+    margin: 8rem;
+}
+
+a:hover {
+    color: rgba(0, 24, 235, 0.652);
+    transition: 300ms;
 }
 
 p {
