--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,6 +35,7 @@
             </div>
 
             <button type="submit"> Ingresar </button>
+            <a href="/"> Menú Principal </a>
 
     </form>
     <script src="/js/loginValidation.js"></script>
