--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -15,15 +15,7 @@
 <body>
     
     <header>
-
-        <div class="logo-header">
-            <img src="/images/logo-blanco-40trip.svg" alt="Logo de 40Trip">
-        </div>
-
-        <nav class="menu-principal">
-            <a href="#">Menú principal</a> 
-        </nav>
-
+        <%- include('partials/header.ejs') %>
     </header>
     
     <main>
