--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,14 +12,11 @@
         <!-- /Header -->
         <main>
 
-            <div class="divContenedor">
-
-                <article>
-                    <h3> Nuestros viajes </h3>
+            <h1> Nuestros viajes </h1>
                     
-                    <p>Estos son los destinos destacados en nuestras propuestas de viajes en Argentina y
-                        Chile. </p>
-                </article>
+                    <p>Estos son los destinos destacados en nuestras propuestas de viajes en Argentina y Chile. </p>
+
+            <div class="divContenedor">
 
                 <% for( let i=0; i < products.length; i++ ) { %>
                     <article class="card-product">
