--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,6 +33,8 @@ header .logo{
     padding-left: 1rem;
     padding-right: 1rem;
     width: 50%;
+    max-width:70px;
+    max-height: 300px;
 }
 
 header div{
@@ -101,22 +103,30 @@ header ul li a {
     display: none;
 }
 
-h3{
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-p{
-    font-size: 12px;
-}
 
 /* MAIN */
 
 main {
     width: 90%;
     margin: 0 auto;
-    display: flex;
+    /* display: flex; */
 }
+
+h1, p {
+    margin: 2rem 0;
+    text-align: center;
+    font-family: 'Roboto';
+}
+
+h1 {
+    font-size: 30px;
+}
+
+p {
+    font-weight: 400;
+    font-size: 13px;
+}
+
 section {
     margin-top: 20px;
 }
