--- a/public/css/index.css
+++ b/public/css/index.css
@@ -165,6 +165,8 @@ main div {
 article {
     display: flex;
     padding : 10px 15px;
+    background-color: var(--champagne);
+    margin-bottom: 1rem;
 }
 
 
