Modificando la vista del detalle de producto

--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -33,8 +33,7 @@
         <section  class="box1">
             <article>
                 <div class="input">
-                    <p class="tittle"><i class="fa-solid fa-plane"></i> Vuelo </p>
-                    <p class="subtittle">| Operado por <%= products.operatedBy %></p>
+                    <p class="top"><i class="fa-solid fa-plane"></i> Vuelo | Operado por <%= products.operatedBy %> </p>
                 </div>
             </article>
             <article>
