--- a/public/css/delete.css
+++ b/public/css/delete.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&family=PT+Sans+Narrow:wght@400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap');@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&family=PT+Sans+Narrow:wght@400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -54,6 +56,8 @@ main {
 main h1 {
     margin: 2rem;
     text-align: center;
+    font-family: var(--roboto);
+    
 }
 
 main p {
