--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -35,12 +35,12 @@
 
                 </ul>
 
-                <ul class="ul-fecha">
+                <!-- <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
                     
-                </ul>
+                </ul> -->
 
                 <ul>
                     <li> <h3> Cancelación gratis </h3> </li>
@@ -57,12 +57,12 @@
 
                 </ul>
 
-                <ul class="ul-fecha">
+                <!-- <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
                     
-                </ul>
+                </ul> -->
 
                 <ul>
                     <li> <h3> Cancelación gratis </h3> </li>
@@ -78,12 +78,12 @@
                     <li> <p> Av.Pellegrini 937, Tierra del Fuego </p> </li> 
                 </ul>
 
-                <ul class="ul-fecha">
+                <!-- <ul class="ul-fecha">
 
                     <li> <h3> Fecha</h3> </li>
                     <li> <p> Del xx/xx al xx/xx </p> </li>
                     
-                </ul>
+                </ul> -->
 
                 <ul>
                     <li> <h3> Cancelación gratis </h3> </li>
