--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -28,6 +28,7 @@
             <h1>
                 <%= products.productName %>
             </h1>
+            <h4> <%= products.description %> </h4>
             <h3><i class="fa-solid fa-check"></i> Este paquete incluye</h3>
         </section>
         <section  class="box1">
