--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -30,21 +30,14 @@
 
                 <ul> 
 
-                    <li> <h3> Hosteria 01</h3> </li> 
-                    <li> <p> Av.Bustillo 937, San Carlos de Bariloche </p> </li> 
+                    <li> <h3> Cyan Américas Towers Hotel </h3> </li> 
+                    <li> <p> Libertad 1070, Buenos Aires </p> </li> 
 
                 </ul>
 
-                <!-- <ul class="ul-fecha">
-
-                    <li> <h3> Fecha</h3> </li>
-                    <li> <p> Del xx/xx al xx/xx </p> </li>
-                    
-                </ul> -->
-
                 <ul>
                     <li> <h3> Cancelación gratis </h3> </li>
-                    <li> <p> Antes del (dia) del (mes) del (año) </p> </li>
+                    <li> <p> Antes del 8 del 07 del 2022 </p> </li>
                 </ul>
 
             </section>
@@ -52,21 +45,14 @@
             <section class="sec2">
 
                 <ul>
-                    <li> <h3> Hosteria 02</h3> </li> 
-                    <li> <p> Av.Savio 937, San Nicolás de los Arroyos </p> </li> 
+                    <li> <h3> Complejo Turístico Americano </h3> </li> 
+                    <li> <p> Ruta Nacional 12, N3370 Puerto Iguazú</p> </li> 
 
                 </ul>
 
-                <!-- <ul class="ul-fecha">
-
-                    <li> <h3> Fecha</h3> </li>
-                    <li> <p> Del xx/xx al xx/xx </p> </li>
-                    
-                </ul> -->
-
                 <ul>
                     <li> <h3> Cancelación gratis </h3> </li>
-                    <li> <p> Antes del (dia) del (mes) del (año) </p> </li>
+                    <li> <p> Antes del 10 del 07 del 2022 </p> </li>
                 </ul>
 
             </section>
@@ -74,20 +60,13 @@
             <section class="sec3">
 
                 <ul> 
-                    <li> <h3> Hosteria 03</h3> </li> 
-                    <li> <p> Av.Pellegrini 937, Tierra del Fuego </p> </li> 
+                    <li> <h3> Hotel Nevada </h3> </li> 
+                    <li> <p> Rolando 250, San Carlos de Bariloche </p> </li> 
                 </ul>
-
-                <!-- <ul class="ul-fecha">
-
-                    <li> <h3> Fecha</h3> </li>
-                    <li> <p> Del xx/xx al xx/xx </p> </li>
-                    
-                </ul> -->
 
                 <ul>
                     <li> <h3> Cancelación gratis </h3> </li>
-                    <li> <p> Antes del (dia) del (mes) del (año) </p> </li>
+                    <li> <p>Antes del 15 del 07 del 2022 </p> </li>
                 </ul>
 
             </section>
