--- a/public/css/catalogue.css
+++ b/public/css/catalogue.css
@@ -33,6 +33,11 @@ header .menu-principal {
     font-family: var(--roboto);
 }
 
+header nav {
+    position: absolute;
+    right: 20px;
+}
+
 header nav a {
     color: white;
     text-decoration: none;
