--- a/public/css/index.css
+++ b/public/css/index.css
@@ -45,7 +45,11 @@ header div{
 .top-header{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    padding: 1rem;
+}
+
+.top-header img {
+    max-width: 200px;
 }
 
 header p{
@@ -65,6 +69,7 @@ header p{
     font-size: 1.2rem;
     position: absolute;
     right: 60px;
+    top: 15px;
 }
 
 
@@ -87,8 +92,8 @@ header nav{
     margin-left: 30%;
     padding-bottom: 4rem;
     position: relative;
-    top: 150px;
-    right: 250px;
+    top: 100px;
+    right: 180px;
 }
 
 header ul li {
@@ -196,12 +201,17 @@ footer div {
 footer .footer1 {
     display: flex;
     justify-content: space-between;
-    font-family: var(--roboto);
+    font-family: 'Roboto';
+    font-size: 15px;
 }
 
 footer div .logo-footer {
     order: 1;
     margin: 20px;
+}
+
+footer div .logo-footer img {
+    max-width: 200px;
 }
 
 footer div .siguenos-en {
@@ -216,12 +226,13 @@ footer div a {
 footer .der-reservados {
     color: white;
     margin-bottom: 0.8rem;
+    font-size: 15px;
 }
 
 footer .footer2 {
     display: flex;
     justify-content: center;
-    font-family: var(--roboto);
+    font-family: 'Roboto';
 }
 
 footer div .nav-bar {
@@ -236,6 +247,7 @@ footer div .nav-bar i {
     margin-bottom: 1.5rem;
     margin-top: 0.5rem;
 }
+
 
 /* MEDIA QUERIES */
 
