--- a/views/register.ejs
+++ b/views/register.ejs
@@ -73,10 +73,11 @@
                 <div class=' <%= locals.errors && errors.avatar ? 'text-danger' : null  %> '><%= locals.errors && errors.avatar ? errors.avatar.msg : null %></div>
             </div>
             <button type="submit"> Registrate</button>
-            <a href="/">Menú Principal</a>
+                <a href="/" class="main-menu">Menu principal</a>
         </div>
         
     </form>
+   
     </main>
     <script src="/js/registerValidation.js"></script>
 </body>
