--- a/public/css/register.css
+++ b/public/css/register.css
@@ -79,12 +79,12 @@ button{
     display: block;
     width: 80%;
     margin: 10px auto;
-    color: rgb(87, 87, 87);
+    color:rgb(15, 15, 15);
     height: 40px;
 }
 
 button:hover {
-    background-color: rgba(0, 24, 235, 0.652);
+    background-color: rgba(13, 53, 196, 0.922);
     transition: 300ms;
 }
 
@@ -108,11 +108,6 @@ p {
 
 h3 {
     margin-top: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: black;
 }
 
 form .botones button{
@@ -158,4 +153,11 @@ form .text-danger {
 .valid {
     border: solid 1px green;
     box-shadow: 0 0 10px green
+}
+
+.main-menu {
+    font-size: 18px;
+    text-decoration: none;
+    color: rgb(15, 15, 15);
+    padding: 5px;
 }
