--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
             </div>
 
             <button type="submit"> Ingresar </button>
-            <a href="/"> Menú Principal </a>
+            <a href="/" class="main-menu"> Menú Principal </a>
 
     </form>
     <script src="/js/loginValidation.js"></script>
