--- a/views/partials/header-navbar.ejs
+++ b/views/partials/header-navbar.ejs
@@ -17,7 +17,7 @@
                 <li>
                     <% if (locals.isLogged) { %>
                         <a href="">
-                            <p>Hola! <%=  users.firstName  %>
+                            <p>Hola! <%=  user.firstName  %>
         
                             </p>
                         </a>
