--- a/views/partials/header-navbar.ejs
+++ b/views/partials/header-navbar.ejs
@@ -16,8 +16,8 @@
                 </li>
                 <li>
                     <% if (locals.isLogged) { %>
-                        <a href="">
-                            <p>Hola! <%=  user.firstName  %>
+                        <a href="/users/profile">
+                            <p>Hola! <%= locals.userLogged.firstName  %>
         
                             </p>
                         </a>
