--- a/views/partials/header-navbar.ejs
+++ b/views/partials/header-navbar.ejs
@@ -1,39 +1,41 @@
-    <div class="top-header">
+<div class="top-header">
 
-            <img src="/images/logo-blanco-40trip.svg" alt="El logo de 40TRIP">
+    <img src="/images/logo-blanco-40trip.svg" alt="El logo de 40TRIP">
 
-        <div class="header-links">
-            <div class="contact">
-                <p><i class="fa-solid fa-phone"></i> VENTAS: 0800-111-2345</p>
-                <p> Lunes a Viernes de 9 a 22. Sabados, Domingos y Feriados de 10 a 18H</p>
-            </div>
+    <div class="header-links">
+        <div class="contact">
+            <p><i class="fa-solid fa-phone"></i> VENTAS: 0800-111-2345</p>
+            <p> Lunes a Viernes de 9 a 22. Sabados, Domingos y Feriados de 10 a 18H</p>
         </div>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="/products/catalogue"> Catálogo </a>
-                </li>
-                <li>
-                    <% if (locals.isLogged) { %>
-                        <a href="/users/profile">
-                            <p>Hola! <%= locals.userLogged.firstName  %>
-        
-                            </p>
-                        </a>
-        
-                        <a href="/users/logout">
-                            Cerrar sesión
-                        </a>
-                        <% } else{ %>
-                            <a href="/users/login"><i class="fa-regular fa-user"></i> Ingresar</a>
-                            <% } %>
-                </li>
-
-                <li>
-                    <a href="/users/register"><i class="fa-regular fa-pen-to-square"></i> Registrar</a>
-                </li>
-
-            </ul>
-        </nav>
     </div>
+
+    <nav class="usuario-registrado">
+        <ul>
+            <% if (locals.isLogged) { %>
+                <li>
+                    <a href="/users/profile"> Hola! <%= locals.userLogged.firstName %> </a>
+                </li>
+
+                <li>
+                    <a href="/users/logout">
+                        Cerrar sesión
+                    </a>
+                </li>
+
+                <% } else{ %>
+                    <li>
+                        <a href="/users/login"><i class="fa-regular fa-user"></i> Ingresar</a>
+                    </li>
+
+                    <li>
+                        <a href="/users/register"><i class="fa-regular fa-pen-to-square"></i> Registrar</a>
+                    </li>
+                    <% } %>
+
+                        <li>
+                            <a href="/products/catalogue"> Catálogo </a>
+                        </li>
+
+        </ul>
+    </nav>
+</div>
